--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <input id="noun" class="form-control" type="text">
           </div>
 
-          <button type="submit" class="btn">Show me the story!</button>
+          <button type="submit" class="btn">Submit</button>
         </form>
       </div>
 
