--- a/index.html
+++ b/index.html
@@ -31,15 +31,23 @@
         </div>
       </div>
 
-      <div class="form-group">
-        <label for="color">Customize your bike color</label>
-        <input id="color" class="form-control" type="color">
-      </div>
 
       <div>
         <form id="formOne">
           <div class="form-group">
-            <label for="person1">Your name</label>
+            <label for="color">Bike Color Menu</label>
+            <select class="form-control" id="beverage">
+              <option>White</option>
+              <option>Grey</option>
+              <option>Gunmetal/Red</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="color">Alternatively: Customize your bike color!</label>
+            <input id="color" class="form-control" type="color">
+          </div>
+          <div class="form-group">
+            <label for="person1">Your Name</label>
             <input id="person1" class="form-control" type="text">
           </div>
           <div class="form-group">
@@ -62,6 +70,7 @@
             <label for="noun">Zipcode</label>
             <input id="noun" class="form-control" type="text">
           </div>
+
 
           <button type="submit" class="btn">Submit</button>
         </form>
