--- a/index.html
+++ b/index.html
@@ -63,12 +63,72 @@
             <input id="exclamation" class="form-control" type="text">
           </div>
           <div class="form-group">
-            <label for="verb">State</label>
-            <input id="verb" class="form-control" type="text">
+            <label for="color">State</label>
+            <select class="form-control" id="state">
+              <option>Alabama</option>
+              <option>Alaska</option>
+              <option>Arizona</option>
+              <option>Arkansas</option>
+              <option>California</option>
+              <option>Colorado</option>
+              <option>Connecticut</option>
+              <option>Delaware</option>
+              <option>Florida</option>
+              <option>Georgia</option>
+              <option>Hawaii</option>
+              <option>Idaho</option>
+              <option>Illinois</option>
+              <option>Indiana</option>
+              <option>Iowa</option>
+              <option>Kansas</option>
+              <option>Kentucky</option>
+              <option>Louisiana</option>
+              <option>Maine</option>
+              <option>Maryland</option>
+              <option>Massachusetts</option>
+              <option>Michigan</option>
+              <option>Minnesota</option>
+              <option>Mississippi</option>
+              <option>Missouri</option>
+              <option>Montana</option>
+              <option>Nebraska</option>
+              <option>Nevada</option>
+              <option>New Hampshire</option>
+              <option>New Jersey</option>
+              <option>New Mexico</option>
+              <option>New York</option>
+              <option>North Carolina</option>
+              <option>North Dakota</option>
+              <option>Ohio</option>
+              <option>Oklahoma</option>
+              <option>Oregon</option>
+              <option>Pennsylvania</option>
+              <option>Rhode Island</option>
+              <option>South Carolina</option>
+              <option>South Dakota</option>
+              <option>Tennessee</option>
+              <option>Texas</option>
+              <option>Utah</option>
+              <option>Vermont</option>
+              <option>Virginia</option>
+              <option>Washington</option>
+              <option>West Virginia</option>
+              <option>Wisconsin</option>
+              <option>Wyoming</option>
+            </select>
           </div>
           <div class="form-group">
             <label for="noun">Zipcode</label>
             <input id="noun" class="form-control" type="text">
+          </div>
+          <div class="form-group">
+            <label for="color">Payment</label>
+            <select class="form-control" id="beverage">
+              <option>Bitcoin</option>
+              <option>Western Union</option>
+              <option>Cashier's Check</option>
+              <option>Favors</option>
+            </select>
           </div>
 
 
