--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
         <form id="formOne">
           <div class="form-group">
             <label for="color">Bike Color Menu</label>
-            <select class="form-control" id="beverage">
+            <select class="form-control" id="color">
+              <option>Chose your color...</option>
               <option>White</option>
               <option>Grey</option>
               <option>Gunmetal/Red</option>
+              <option>Custom color picker</option>
             </select>
           </div>
           <div class="form-group">
@@ -65,6 +67,7 @@
           <div class="form-group">
             <label for="color">State</label>
             <select class="form-control" id="state">
+              <option>Chose your state...</option>
               <option>Alabama</option>
               <option>Alaska</option>
               <option>Arizona</option>
@@ -124,6 +127,7 @@
           <div class="form-group">
             <label for="color">Payment</label>
             <select class="form-control" id="beverage">
+              <option>Chose your payment option...</option>
               <option>Bitcoin</option>
               <option>Western Union</option>
               <option>Cashier's Check</option>
