add submit button link

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           </div>
 
 
-          <button type="submit" class="btn">Submit</button>
+          <a href="receipt.html" class="btn btn-info" type="submit" role="button">Submit</a>
         </form>
       </div>
 
