updated form id #

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 
       <div class="row">
         <div class="col-md-4">
-          <img src="img/white.jpg" alt="white ducati monster" />
+          <img src="img/white.jpg" alt="white ducati monster">
         </div>
         <div class="col-md-4">
-          <img src="img/grey.jpg" alt="grey ducati monster" />
+          <img src="img/grey.jpg" alt="grey ducati monster">
         </div>
         <div class="col-md-4">
-          <img src="img/red.jpg" alt="red framed ducati monster" />
+          <img src="img/red.jpg" alt="red framed ducati monster">
         </div>
       </div>
 
 
       <div>
-        <form id="formOne">
+        <form id="submissionForm">
           <div class="form-group">
             <label for="color">Bike Color Menu</label>
             <select class="form-control" id="color">
@@ -45,27 +45,27 @@
             </select>
           </div>
           <div class="form-group">
-            <label for="color">Alternatively: Customize your bike color!</label>
-            <input id="color" class="form-control" type="color">
+            <label for="customColor">Alternatively: Customize your bike color!</label>
+            <input id="customColor" class="form-control" type="color">
           </div>
           <div class="form-group">
-            <label for="person1">Your Name</label>
-            <input id="person1" class="form-control" type="text">
+            <label for="name">Your Name</label>
+            <input id="name" class="form-control" type="text">
           </div>
           <div class="form-group">
-            <label for="person2">Phone Number</label>
-            <input id="person2" class="form-control" type="text">
+            <label for="phone">Phone Number</label>
+            <input id="phone" class="form-control" type="text">
           </div>
           <div class="form-group">
-            <label for="animal">Street Address</label>
-            <input id="animal" class="form-control" type="text">
+            <label for="streetAddress">Street Address</label>
+            <input id="streetAddress" class="form-control" type="text">
           </div>
           <div class="form-group">
-            <label for="exclamation">City</label>
-            <input id="exclamation" class="form-control" type="text">
+            <label for="city">City</label>
+            <input id="city" class="form-control" type="text">
           </div>
           <div class="form-group">
-            <label for="color">State</label>
+            <label for="state">State</label>
             <select class="form-control" id="state">
               <option>Chose your state...</option>
               <option>Alabama</option>
@@ -121,12 +121,12 @@
             </select>
           </div>
           <div class="form-group">
-            <label for="noun">Zipcode</label>
-            <input id="noun" class="form-control" type="text">
+            <label for="zipcode">Zipcode</label>
+            <input id="zipcode" class="form-control" type="text">
           </div>
           <div class="form-group">
-            <label for="color">Payment</label>
-            <select class="form-control" id="beverage">
+            <label for="paymentType">Payment</label>
+            <select class="form-control" id="paymentType">
               <option>Chose your payment option...</option>
               <option>Bitcoin</option>
               <option>Western Union</option>
