--- a/receipt.html
+++ b/receipt.html
@@ -9,7 +9,9 @@
     <title>Receipt</title>
   </head>
   <body>
-    <h1>Rowdy's Place</h1>
-    <h2>Receipt</h2>
+    <div class="container">
+      <h1>Rowdy's Place</h1>
+      <h2>Receipt</h2>
+    </div>
   </body>
 </html>
