add javascript variables to capture the form data and placeholders in receipt.html for that data.

--- a/receipt.html
+++ b/receipt.html
@@ -12,6 +12,15 @@
     <div class="container">
       <h1>Rowdy's Place</h1>
       <h2>Receipt</h2>
+      <p id="color"></p>
+      <p id="customColor"></p>
+      <p id="name"></p>
+      <p id="phone"></p>
+      <p id="streetAddress"></p>
+      <p id="city"></p>
+      <p id="state"></p>
+      <p id="zipcode"></p>
+      <p id="paymentType"></p>
     </div>
   </body>
 </html>
