style receipt, enter thank you with name, and include slider for reciept reveal

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="form-group">
             <label for="color">Bike Color Menu</label>
             <select class="form-control" id="color">
-              <option>Chose your color...</option>
+              <option>Choose your color...</option>
               <option>White</option>
               <option>Grey</option>
               <option>Gunmetal/Red</option>
@@ -68,7 +68,7 @@
           <div class="form-group">
             <label for="state">State</label>
             <select class="form-control" id="state">
-              <option>Chose your state...</option>
+              <option>Choose your state...</option>
               <option>Alabama</option>
               <option>Alaska</option>
               <option>Arizona</option>
@@ -128,7 +128,7 @@
           <div class="form-group">
             <label for="paymentType">Payment</label>
             <select class="form-control" id="paymentType">
-              <option>Chose your payment option...</option>
+              <option>Choose your payment option...</option>
               <option>Bitcoin</option>
               <option>Western Union</option>
               <option>Cashier's Check</option>
@@ -144,6 +144,8 @@
     <div class="container" id="receiptPage">
       <h1>Rowdy's Place</h1>
       <h2>Receipt</h2>
+
+      <p>Below is your order confirmation, contact and shipping info, and payment method.</p>
       <p id="colorRec"></p>
       <p id="customColorRec"></p>
       <p id="nameRec"></p>
@@ -153,6 +155,8 @@
       <p id="stateRec"></p>
       <p id="zipcodeRec"></p>
       <p id="paymentTypeRec"></p>
+
+      <h3 id="thanks"></h3>
     </div>
 
   </body>
