--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
               <option>White</option>
               <option>Grey</option>
               <option>Gunmetal/Red</option>
-              <option>Custom color picker</option>
+              <option id="customOption">Custom color picker</option>
             </select>
           </div>
-          <div class="form-group">
-            <label for="customColor">Alternatively: Customize your bike color!</label>
+          <div id="customColorDiv" class="form-group">
+            <label for="customColor">Customize your bike color!</label>
             <input id="customColor" class="form-control" type="color">
           </div>
           <div class="form-group">
